Update StudentUnitRecordManager.java
Fixed a error:
<anonymous datamanagement.StudentUnitRecordManager$1> is not abstract and does not override abstract method setAssignment1(float) in IStudentUnitRecord
by adding:
 @Override
        public void setAssignment1(float assignment1Mark) {
            throw new UnsupportedOperationException("Not supported yet."); 
        }
changed method name  getStudentID() -> getStudentId(), getUnitCode -> getSubjectCode(), getAsg1() -> getAssignment1(),getAsg2() -> getAssignment2()